# 3S-DMD-resources

./: Interactive.md  Non-interactive.md  README.md  Replication.md  Results.md  video.md
code/3SDMD_code/: README.txt
code/3SDMD_code/Code/: JPEG  Smsssim.m  Smsssim_.m  Sssim.m  evaluation  ssim_index_new.m
code/3SDMD_code/Code/imConvert/: B.pgm  G.pgm  Image.cpp  ImageWriter.cpp  Makefile  R.pgm  config.txt  controlPoint.txt  main.cpp  skeleton_cuda.cpp  skeletonify  uncompressed.sir
code/3SDMD_code/Code/imConvert/include/: Image.hpp  (+1 more)
code/3SDMD_code/Code/imShow/: B.pgm  ControlPoints.txt  DataManager.cpp  G.pgm  ImageDecoder.cpp  Makefile  R.pgm  gmon.out  main.cpp  output.sir  sample.txt  show_skeleton  skeleton_cuda.cpp
code/3SDMD_code/Image/type1/: 0097.ppm
code/3SDMD_code/SaliencyMap/type1/: 0097.pgm
code/3SDMD_code/outputFile/: JPGmsssim.txt  compressRate2.txt  jpgRate.txt  skeleton_msssim2.txt
code/interactive-3sdmd/: CMakeLists.txt  conanfile.txt  resources.qrc
code/interactive-3sdmd/images/: car.pgm  car_sm.pgm  car_ssim.pgm
code/interactive-3sdmd/include/: InteractiveSdmd.hpp  MainWidget.hpp  MainWindow.hpp  dmdProcess.hpp  dmdReconstruct.hpp  scribbleWidget.hpp
code/interactive-3sdmd/src/: InteractiveSdmd.cpp  MainWidget.cpp  MainWindow.cpp  dmdProcess.cpp  dmdReconstruct.cpp  main.cpp  scribbleWidget.cpp
imgs/: 0354.ppm  bird-3s  bird-dmd  bird-ss  cartoon-3s  cartoon-dmd  cartoon-ss  f12-3s  f12-dmd  f12-ss  f3-3s  f3-dmd  f3-ss  f5-3s  f5-dmd  f5-ss  f9-3s  f9-dmd  f9-ss  jar-3s  jar-d  jar-s  kids-3s  kids-d  kids-s
(+5 files in other folders)
